--- a/src/stylesheets/book.css
+++ b/src/stylesheets/book.css
@@ -1,16 +1,24 @@
 .book {
-  padding: 10px;
   margin: 20px;
+  position: relative;
 }
 
 .book .img {
   height: 200px;
   width: 160px;
-  background: blue;
+  background: rgb(106, 106, 208);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
 
 .book-description {
   margin-top: 10px;
+  width: 160px;
+}
+
+.edit-icon {
+  width: 30px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
