--- a/src/stylesheets/book.css
+++ b/src/stylesheets/book.css
@@ -1,6 +1,7 @@
 .book {
   margin: 20px;
   position: relative;
+  transition: all .2s ease-in-out;
 }
 
 .book .img {
@@ -16,9 +17,24 @@
   width: 160px;
 }
 
-.edit-icon {
-  width: 30px;
+.icons {
   position: absolute;
   top: 10px;
   right: 10px;
+  display: none;
+  transition: all .1s ease-in-out;
+}
+
+.icons img {
+  width: 25px;
+  transition: all .2s ease-in-out;
+}
+
+.book:hover {
+  transform: scale(1.009);
+  cursor: pointer
+}
+
+.book:hover .icons {
+  display: block
 }
