--- a/src/stylesheets/book.css
+++ b/src/stylesheets/book.css
@@ -16,6 +16,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .book-description {
